// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show the ExpensesSummary component correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    3
     
    expenses
     totalling 
    $1,212.00
  </h1>
</div>
`;

exports[`should show the ExpensesSummary component correctly with one expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
